--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,55 @@
-.App {
-  text-align: center;
+body {
+  background-color: #62c2c8;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.app{
+  background-color: white;
+  min-height: 80vh;
+  width: 400px;
+  margin: 20px auto;
+  font-family: 'Montserrat', sans-serif;
 }
+.crossed {
+  text-decoration: line-through 2px red;
+  background-color: #f0f0f0;
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+ul, li{
+  list-style-type: none;
+  padding: 10px;
+  margin: 0;
+  font-family: 'Montserrat', sans-serif;
+}
+.container{
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+}
+.btn-add {
+
+  background: #65aa06;
+  margin-top: 5px;
 }
 
-.App-link {
-  color: #61dafb;
+.btn-delete {
+  background: #d30100;
+  margin-bottom: 5px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+
+
+.btn {
+padding: 10px;
+border: none;
+width: 70%;
+color: white;
+font-size: 16px;
+font-family: 'Montserrat', sans-serif;
+}
+input {
+  flex:1;
+  padding: 8px;
+  margin: 10px;
+  font-family: 'Montserrat', sans-serif;
+}
+img{
+  border-radius: 50%;
 }
